style: added max-width to prevent unnecessary overflow

--- a/input.css
+++ b/input.css
@@ -10,4 +10,5 @@
 
 body {
   max-width: 100%;
+  overflow-x: hidden;
 }
